syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/grpc/proto/patient/patient.proto
package grpc;
option go_package= "main/app/grpc/proto/patient";

service PatientService {
  rpc GetPatientById (PatientRequest) returns (PatientResponse) {}
}

message PatientRequest {
  int64  patientNo = 1;
}

message PatientResponse {
    int64 patientNo = 1;
    string name = 2;
    uint64 age = 3;
    string birthDate = 4;
    string gender = 5;
    bool alived = 6;
}
